# enum-playground

./: .gitignore  Makefile  README.md  pyproject.toml
config/: settings.py
core/: admin.py  enums.py  forms.py  models.py  tests.py  urls.py  views.py
core/migrations/: 0001_initial.py
core/templates/core/: product_form.html
core/utils/: get_first_item.py  print_context.py
