[project]
name = "enum-playground"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "django>=5.1.4",
    "django-enum>=2.0.2",
    "enum-properties>=2.0.1",
    "ipython>=8.31.0",
    "typing-extensions>=4.12.2",
]

[tool.ruff.lint]
# Avoid enforcing line-length violations (`E501`)
ignore = ["E501"]
